--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
