--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.3",
-    "resend": "^4.7.0"
+    "resend": "^4.7.0",
+    "slugify": "^1.6.6"
   },
   "name": "backend",
   "version": "1.0.0",
